--- a/Bio.css
+++ b/Bio.css
@@ -4,6 +4,7 @@
 	box-sizing: border-box;         /* Safari 5.1+, Chrome 10+, Firefox 29+, Opera 7+, IE 8+, Android 4.0+, iOS any */	
 }
 .header{
+	color:white;
 	text-align:center;
 	padding: 28px;
 	font-size: 25px;
@@ -17,30 +18,92 @@
 }
 a{
 	text-decoration: none;
-	color:black;
+	color:white;
 }
+/*.scroll{
+	width:600px;
+	background-color:gray;
+	opacity: 0.9;
+	float:right;
+}*/
+
 .description{
-		font-size:20px;
-		color:white;
-		text-align:center;
-		width:800px;
-		margin:0 auto;
+	color:white;
+	width:98%;
+	margin:20px 1%;
+	display:block;
+	font-size:16px;
 	}
-.bio{
+body{
+background-image:url("http://galyonkin.com/wp-content/uploads/2011/10/Broken-Playstation-Controller-Wallpaper.png");
+background-repeat:no-repeat;
+background-size:relative ;
+background-position:center;
+background-attachment: fixed;
+/*.bio{
 	background-image:url("http://galyonkin.com/wp-content/uploads/2011/10/Broken-Playstation-Controller-Wallpaper.png");
 	width:98%;
 	/*height:61px;*/
-	margin:20px 1%;
-	display:block;
-	
+	/*margin:20px 1%;
+	display:block;*/
 }
-body{
-	background-color: red;
-	
-}
+
 .footer{
 	clear:both;
 	text-align:center;
-	font-size:16px;
+	font-size:20px;
 	font-family: 'Open Sans', sans-serif;
+	color:white;
 }
+
+@media (min-width: 768px) {
+	.header {
+		font-size: 48px;
+	}
+	.nav{
+		font-size:30px;
+	}
+	/*.scroll{
+
+	 width: 700px;
+   
+    overflow: scroll;
+	}*/
+}
+
+@media (min-width: 1241px) {
+	.header{
+		font-size: 64px;
+		color:white;
+	}
+	
+	.nav{
+		color:white;
+	}
+	a{
+		color:white;
+		font-size: 40px;
+	}
+	.description{
+		text-align: center;
+		width:600px;
+		margin:0 auto;
+	}
+	
+}
+
+.footer{
+	clear:both;
+	text-align:center;
+	font-size:20px;
+	font-family: 'Open Sans', sans-serif;
+	color:white;
+}
+@media (min-width: 768px) {
+	.footer {
+		font-size:30px;
+		text-align: center;
+		color:white;
+	}
+}
+
