--- a/Bio.css
+++ b/Bio.css
@@ -36,13 +36,11 @@ a{
 	}
 body{
 background-image:url("http://galyonkin.com/wp-content/uploads/2011/10/Broken-Playstation-Controller-Wallpaper.png");
-background-repeat:no-repeat;
+/*background-repeat:no-repeat;*/
 background-size:relative ;
 background-position:center;
 background-attachment: fixed;
-/*.bio{
-	background-image:url("http://galyonkin.com/wp-content/uploads/2011/10/Broken-Playstation-Controller-Wallpaper.png");
-	width:98%;
+	width:100%;
 	/*height:61px;*/
 	/*margin:20px 1%;
 	display:block;*/
