--- a/Bio.css
+++ b/Bio.css
@@ -4,7 +4,7 @@
 	box-sizing: border-box;         /* Safari 5.1+, Chrome 10+, Firefox 29+, Opera 7+, IE 8+, Android 4.0+, iOS any */	
 }
 .header{
-	color:white;
+	
 	text-align:center;
 	padding: 28px;
 	font-size: 25px;
@@ -12,13 +12,13 @@
 }
 .nav{
 	text-align:center;
-	padding-top:20px;
 	font-size:16px;
 	font-family: 'Open Sans', sans-serif;
 }
 a{
 	text-decoration: none;
-	color:white;
+	color:black;
+
 }
 /*.scroll{
 	width:600px;
@@ -26,32 +26,21 @@ a{
 	opacity: 0.9;
 	float:right;
 }*/
-
+body{
+	background-color:red;
+}
 .description{
-	color:white;
 	width:98%;
 	margin:20px 1%;
 	display:block;
 	font-size:16px;
 	}
-body{
-background-image:url("http://galyonkin.com/wp-content/uploads/2011/10/Broken-Playstation-Controller-Wallpaper.png");
-/*background-repeat:no-repeat;*/
-background-size:relative ;
-background-position:center;
-background-attachment: fixed;
-	width:100%;
-	/*height:61px;*/
-	/*margin:20px 1%;
-	display:block;*/
-}
 
 .footer{
 	clear:both;
 	text-align:center;
 	font-size:20px;
 	font-family: 'Open Sans', sans-serif;
-	color:white;
 }
 
 @media (min-width: 768px) {
@@ -74,28 +63,29 @@ background-attachment: fixed;
 		font-size: 64px;
 		color:white;
 	}
+	body{
+	background-image:url("http://p1.pichost.me/i/30/1529961.jpg");
+	background-repeat:no-repeat;
+	background-size:100% ;
+	background-position:center;
+	background-attachment: fixed;
 	
-	.nav{
-		color:white;
-	}
+}
+
+
 	a{
 		color:white;
 		font-size: 40px;
 	}
 	.description{
-		width:600px;
+		width:500px;
 		margin:0 auto;
+		color:white;
+		font-size:30;
 	}
 	
 }
 
-.footer{
-	clear:both;
-	text-align:center;
-	font-size:20px;
-	font-family: 'Open Sans', sans-serif;
-	color:white;
-}
 @media (min-width: 768px) {
 	.footer {
 		font-size:30px;
