--- a/Bio.css
+++ b/Bio.css
@@ -27,7 +27,12 @@ a{
 	float:right;
 }*/
 body{
-	background-color:red;
+	background-image:url("http://p1.pichost.me/i/30/1529961.jpg");
+	background-repeat:no-repeat;
+	background-size:relative;
+	background-position:center;
+	background-attachment: fixed;
+	
 }
 .description{
 	width:98%;
