--- a/Bio.css
+++ b/Bio.css
@@ -27,13 +27,16 @@ a{
 	float:right;
 }*/
 body{
+	color:red;
+}
+/*body{
 	background-image:url("http://p1.pichost.me/i/30/1529961.jpg");
 	background-repeat:no-repeat;
 	background-size:relative;
 	background-position:center;
 	background-attachment: fixed;
 	
-}
+}*/
 .description{
 	width:98%;
 	margin:20px 1%;
@@ -69,12 +72,7 @@ body{
 		color:white;
 	}
 	body{
-	background-image:url("http://p1.pichost.me/i/30/1529961.jpg");
-	background-repeat:no-repeat;
-	background-size:100% ;
-	background-position:center;
-	background-attachment: fixed;
-	
+	color:black;
 }
 
 
