--- a/Bio.css
+++ b/Bio.css
@@ -27,7 +27,7 @@ a{
 	float:right;
 }*/
 body{
-	background-color:red;
+	background-color:#FF3300;
 }
 /*body{
 	background-image:url("http://p1.pichost.me/i/30/1529961.jpg");
