--- a/Bio.css
+++ b/Bio.css
@@ -72,11 +72,7 @@ body{
 		color:white;
 	}
 	body{
-	background-image:url("http://p1.pichost.me/i/30/1529961.jpg");
-	background-repeat:no-repeat;
-	background-size:relative;
-	background-position:center;
-	background-attachment: fixed;
+	background-color:black;
 }
 
 
