--- a/Bio.css
+++ b/Bio.css
@@ -17,7 +17,7 @@
 }
 a{
 	text-decoration: none;
-	color:black;
+	color:white;
 
 }
 /*.scroll{
@@ -39,9 +39,11 @@ body{
 	margin:20px 1%;
 	display:block;
 	font-size:16px;
+	color:white;
 	}
 
 .footer{
+	color:white;
 	clear:both;
 	text-align:center;
 	font-size:20px;
